--- a/front_end/index.html
+++ b/front_end/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
+    is this working
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
