--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="1; url=/Website/front_end/dist" />
+    <meta http-equiv="refresh" content="1; url=/Website/front_end/dist/index.html" />
   </head>
   <body>
   </body>
