--- a/404.html
+++ b/404.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <script type="text/javascript">
-      // // Check if the current URL is missing the 'dist' part
-      // if (!window.location.pathname.includes('/dist/')) {
-      //   // Redirect to the correct path
-      //   window.location.replace('/Website/front_end/dist/');
-      // }
+      // Check if the current URL is missing the 'dist' part
+      if (!window.location.pathname.includes('/dist/')) {
+        // Redirect to the correct path while preserving the original URL
+        window.location.replace('/Website/front_end/dist' + window.location.pathname + window.location.search + window.location.hash);
+      }
     </script>
-    <meta http-equiv="refresh" content="0; url=/Website/front_end/dist" />
+    <meta http-equiv="refresh" content="0; url=/Website/front_end/dist/index.html" />
   </head>
   <body>
   </body>
