removed path to index.html in 404

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         window.location.replace('/Website/front_end/dist' + window.location.pathname + window.location.search + window.location.hash);
       }
     </script>
-    <meta http-equiv="refresh" content="0; url=/Website/front_end/dist/index.html" />
+    <meta http-equiv="refresh" content="0; url=/Website/front_end/dist" />
   </head>
   <body>
   </body>
